tests/typing/pass/literal_cmp.crs
fn main() bool {
    return 3 == 2*2;
}