tests/typing/fail/call_a_non_function_type.crs
fn test(a : i32) {
    a(2);
}